# pepsi-promo-copilot

./: .gitignore  README.md  pyproject.toml  run.sh
data/best_practices/: pricing_strategy.md  seasonal_guidelines.md
data/case_studies/: successful_campaigns.md
data/guidelines/: retailer_collaboration.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/components/ui/: MarkdownParser.tsx  PepsiPromoAnalyzer.tsx
src/: main.py  requirements.txt
