[project]
name = "pepsi-promo-copilot"
version = "0.1.0"
description = "AI-powered tool for Pepsi promotional calendar analysis"
authors = [
    {name = "Pepsi Team", email = "team@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "chromadb",
    "python-dotenv",
    "openai",
    "tiktoken",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
multi_line_output = 3
